assets/css/style.css
/* ... */
.border-glow {
    box-shadow: 0 4px 8px 0 rgb(4, 0, 255), 0 6px 20px 0 rgb(204, 0, 255);
}
.border-glow-2 {
    box-shadow: 8px -8px 10px 0px rgb(4, 0, 255), -8px 8px 10px 0px rgb(204, 0, 255);
    border-radius: 5px;
}

.border-gradient {
    position: relative;
    width: 450px;
    padding: 40px 0;
    font-size: 5em;
    color: #fff;
    text-align: center;
    letter-spacing: 5px;
    background-color: #020117;
}

.border-gradient::after {
    content: '';
    position: absolute;
    top: -5px;
    left: -5px;
    right: -5px;
    bottom: -5px;
    background: linear-gradient(45deg, #ffd800, #ff5520, #750cf2, #0cbcf2);
    z-index: -1;
}

.border-gradient::before {
    content:  '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(45deg, #ffd800, #ff5520, #750cf2, #0cbcf2);
    z-index: -2;
    filter: blur(40px);
}

.color {
    color: #6cb670;
}

.sub-title {
    padding: 0 0 50px;
}

.sub-title>h3 {
    border-left: 3px solid #ddd;
    border-right: 3px solid #ddd;
    display: inline-block;
    padding: 5px 25px;
    text-transform: uppercase;
}

.btn.active:focus,
.btn:active:focus,
.btn:focus {
    outline: 0;
}

.bg-one {
    background-color: #0f1e31;
    padding-top: 16px;
    border-radius: 18px;
}

.bg-dark {
    background: #0f1e31;
}

.parallax-section {
    background-attachment: fixed !important;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}

.no-padding {
    padding: 0 !important;
}

.inline-block {
    display: inline-block;
}

.btn {
    cursor: pointer;
}

.btn.focus,
.btn:focus {
    box-shadow: none;
}

.btn-main {
    background: #57cbcc;
    color: #fff;
    display: inline-block;
    font-size: 16px;
    font-weight: bold;
    letter-spacing: 1px;
    padding: 10px 35px;
    text-transform: uppercase;
}

.btn-main:hover {
    background: #2c9091;
    color: #fff;
}

.mt-20 {
    margin-top: 20px;
}

.mb-20 {
    margin-bottom: 20px;
}

.section {
    padding: 100px 0;
}

@media (max-width: 480px) {
    .section {
        padding: 50px 0;
    }
}

@media (max-width: 768px) {
    .section {
        padding: 80px 0;
    }
}

.section-sm {
    padding: 70px 0;
}

.section-xs {
    padding: 50px 0;
}

.btn:focus {
    color: #ddd;
}

#home {
    position: relative;
}

.btn.active:focus,
.btn:active:focus,
.btn:focus {
    outline: 0;
}

.parallax-section {
    background-attachment: fixed;
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}

.preloader {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #2c2f36;
    z-index: 9999;
    display: flex;
    align-items: center;
    justify-content: center;
} 

.title {
    padding-bottom: 60px;
}

.title h2 {
    text-transform: capitalize;
    font-weight: 700;
    font-size: 38px;
    color: #fff;
}

.title h2 span {
    color: #57cbcc;
}

.title p {
    color: #666;
}

.title.title-white h2 {
    color: #fff;
}

.bg-gray {
    background: #f9f9f9;
}

.section-bg {
    background: #040b1e;
}

.overly {
    position: relative;
}

.overly:before {
    content: '';
    background: rgba(0, 0, 0, 0.096);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.breadcrumb {
    background-color: #0f1e31;
}

nav[aria-label="breadcrumb"] li:last-child a{
    color: #57cbcc;
    cursor: default;
}

.header-bradcrumb {
    background: transparent;
}

.header-bradcrumb a,
.header-bradcrumb .active {
    color: #cfcfcf;
    font-weight: 200;
    font-family: "Roboto Mono", sans-serif;
}

.header-bradcrumb a:hover {
    color: #57cbcc;
}

.slick-slide {
    outline: none;
}

/* CSS mfp-with-zoom class */
.mfp-with-zoom .mfp-container,
.mfp-with-zoom.mfp-bg {
    opacity: 0;
    transition: all 0.3s ease-out;
}

.mfp-with-zoom.mfp-ready .mfp-container {
    opacity: 1;
}

.mfp-with-zoom.mfp-ready.mfp-bg {
    opacity: 0.8;
}

.mfp-with-zoom.mfp-removing .mfp-container,
.mfp-with-zoom.mfp-removing.mfp-bg {
    opacity: 0;
}

.logo {
    margin-top: 10px;
    display: inline-block;
}

.single-page-header {
    background-image: url("../images/about/about-header.jpg");
    background-size: cover;
    padding: 140px 0 70px;
    text-align: center;
    color: #fff;
    position: relative;
}

.single-page-header:before {
    background: rgba(0, 0, 0, 0.5);
    position: absolute;
    content: '';
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
}

/*=================================================================
    Code Blocks
=================================================================*/

.highlight-wrapper {
    display: block;
    margin: 2.5em 0 1em;;
}
  
.highlight {
    position: relative;
    z-index: 0;
    padding: 0;
    margin: 0;
    border-radius: 0 4px 4px 4px;
}
  
.highlight > .chroma {
    color: #d0d0d0;
    background-color: #212121;
    position: static;
    z-index: 1;
    border-top-left-radius: 0;
    border-radius: 0 4px 4px 4px;
    padding: 10px;
    overflow: auto;
}

pre.chroma {
    margin: 0;
    background-color: #212121;
}

.chroma .lntable {
    display: table;
    width: 100%;
    padding: 0 0 5px;
    
}

.chroma .lntd:first-child {
    padding: 0;
    margin: 0;
}
  
.chroma .lntd:last-child {
    padding: 0;
    margin: 0;
}

.chroma [data-lang]:before {
    position:absolute;
    z-index:0;
    top: -24px;
    left:0;
    content:attr(data-lang);
    font-size:1em;
    font-weight:700;
    color: #00fff9;
    background-color: #212121;
    border-radius: 4px 4px 0 0;
    border:none;
    padding:5px 10px 7px;
    line-height:1;
}
/* ... */

